fixed miner lookup by coinbase addr duplicate bug, using a map now instead of list, to still account for remote posibility of multiple miners depositing to same address. fixed Transaction value overflow bug, where int (32bit default) is used where values are much larger and overflow; now using uint64. same for gas prices and tx cost.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -31,6 +31,7 @@ body {
 
 
 .block .txs {
+	font-size: 12px;
 	background-color: #ababea;
 }
 
@@ -41,6 +42,15 @@ body {
 	padding-top: 3px;
 	padding-bottom: 5px;
 	margin-bottom: 7px;
+}
+
+.block .txs .tx .source_destination {
+	background-color: #abee67;
+}
+
+.block .txs .tx .tx_value span {
+	font-size: 20px;
+	font-weight: bold;
 }
 
 
